force-app/main/default/objects/Notas_de_Auditoria_Borradas__c/Notas_de_Auditoria_Borradas__c.object-meta.xml
<CustomObject>
    <description>Jira DES- 475- Este objeto se utiliza para guardar los registros del objeto Nota_de_Auditoria Borradas</description>
    <label>Nota de Auditoria Borradas</label>
    <nameField>
        <label>Notas de Auditoria Borradas Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notas de Auditoria Borradas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>