force-app/main/default/objects/Notas_de_Auditoria_Borradas__c/fields/Afi_ID_Borrada__c.field-meta.xml
<CustomField>
    <fullName>Afi_ID_Borrada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Afi ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Notas de Auditorias Borradas</relationshipLabel>
    <relationshipName>Notas_de_Auditorias_Borradas</relationshipName>
    <type>Lookup</type>
</CustomField>