force-app/main/default/objects/Notas_de_Auditoria_Borradas__c/fields/APr_Id_Borrada__c.field-meta.xml
<CustomField>
    <fullName>APr_Id_Borrada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Notas de Auditorias Borradas</relationshipLabel>
    <relationshipName>Notas_de_Auditorias_Borradas</relationshipName>
    <type>Lookup</type>
</CustomField>