force-app/main/default/objects/Notas_de_Auditoria_Borradas__c/fields/Auditor_alta__c.field-meta.xml
<CustomField>
    <fullName>Auditor_alta__c</fullName>
    <label>Auditor alta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>