force-app/main/default/objects/Notas_de_Auditoria_Borradas__c/fields/Auditor_modificacion__c.field-meta.xml
<CustomField>
    <fullName>Auditor_modificacion__c</fullName>
    <label>Auditor modificación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>