force-app/main/default/objects/Notas_de_Auditoria_Borradas__c/fields/Campo_clave__c.field-meta.xml
<CustomField>
    <fullName>Campo_clave__c</fullName>
    <label>Campo clave</label>
    <length>255</length>
    <type>Text</type>
</CustomField>