force-app/main/default/objects/Notas_de_Auditoria_Borradas__c/fields/Creado_en_SS_por__c.field-meta.xml
<CustomField>
    <fullName>Creado_en_SS_por__c</fullName>
    <label>Creado en SS por</label>
    <type>TextArea</type>
</CustomField>