force-app/main/default/objects/Notas_de_Auditoria_Borradas__c/fields/Evento_Medico_Id_Borrado__c.field-meta.xml
<CustomField>
    <fullName>Evento_Medico_Id_Borrado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Evento Médico</label>
    <referenceTo>Evento_medico__c</referenceTo>
    <relationshipLabel>Notas de Auditorias Borradas</relationshipLabel>
    <relationshipName>Notas_de_Auditorias_Borradas</relationshipName>
    <type>Lookup</type>
</CustomField>