force-app/main/default/objects/Notas_de_Auditoria_Borradas__c/fields/Fecha_de_Borrado_de_la_Nota__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Borrado_de_la_Nota__c</fullName>
    <description>Fecha de Borrado de la Nota de Auditoria</description>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de Borrado de la Nota</label>
    <type>DateTime</type>
</CustomField>