force-app/main/default/objects/Notas_de_Auditoria_Borradas__c/fields/Fecha_modificacion_en_SS__c.field-meta.xml
<CustomField>
    <fullName>Fecha_modificacion_en_SS__c</fullName>
    <label>Fecha de modificación  en SS</label>
    <type>DateTime</type>
</CustomField>