force-app/main/default/objects/Notas_de_Auditoria_Borradas__c/fields/Id_de_la_Nota_Borrada__c.field-meta.xml
<CustomField>
    <fullName>Id_de_la_Nota_Borrada__c</fullName>
    <description>SF ID de la Nota que ha sido Borrada</description>
    <label>Id de la Nota Borrada</label>
    <length>255</length>
    <type>Text</type>
</CustomField>