force-app/main/default/objects/Notas_de_Auditoria_Borradas__c/fields/Id_Externo__c.field-meta.xml
<CustomField>
    <fullName>Id_Externo__c</fullName>
    <label>Id Nota SS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>