force-app/main/default/objects/Notas_de_Auditoria_Borradas__c/fields/Id_externo_solicitudes__c.field-meta.xml
<CustomField>
    <fullName>Id_externo_solicitudes__c</fullName>
    <description>id externo utilizado para las notas relacionadas a los registros utilizados para solicitudes de afiliados (alta, reingreso, etc)</description>
    <label>Id Nota SS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>