force-app/main/default/objects/Notas_de_Auditoria_Borradas__c/fields/Integrante_Borrada__c.field-meta.xml
<CustomField>
    <fullName>Integrante_Borrada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Integrante</label>
    <referenceTo>Integrante_caso__c</referenceTo>
    <relationshipLabel>Notas de Auditorias Borradas</relationshipLabel>
    <relationshipName>Notas_de_Auditorias_integrante_Borradas</relationshipName>
    <type>Lookup</type>
</CustomField>