force-app/main/default/objects/Notas_de_Auditoria_Borradas__c/fields/Tipo_de_Registro_de_la_Nota_de_Auditoria__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Registro_de_la_Nota_de_Auditoria__c</fullName>
    <description>Campo Texto que refleja el Record Type de la Nota de Registro Borrada</description>
    <label>Tipo de Registro de la Nota de Auditoria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>