force-app/main/default/objects/Notas_de_Auditoria_Borradas__c/fields/Tipo_nota_de_Auditoria_Borrada__c.field-meta.xml
<CustomField>
    <fullName>Tipo_nota_de_Auditoria_Borrada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tipo nota de Auditoria</label>
    <referenceTo>Tipo_nota_de_auditoria__c</referenceTo>
    <relationshipLabel>Notas de Auditorias Borradas</relationshipLabel>
    <relationshipName>Notas_de_Auditorias_Borradas</relationshipName>
    <type>Lookup</type>
</CustomField>