force-app/main/default/objects/Notas_de_Auditoria_Borradas__c/fields/Usuario_Borrador_de_la_Nota__c.field-meta.xml
<CustomField>
    <fullName>Usuario_Borrador_de_la_Nota__c</fullName>
    <description>Campo Fórmula con el Alias del usuario que realiza el borrado de la Nota</description>
    <formula>CreatedBy.Alias</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Usuario Borrador de la Nota</label>
    <type>Text</type>
</CustomField>